Removed all navigation buttons

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -1297,61 +1297,9 @@ Inheritance = SongText3PlayersDuetSingerP3
 
 #and these are the ones for partymode
 
-# NAVBAR for party
-# enter a number
-[SongRouletteStaticParty1]
-X = 200
-Y = 545
-Z = 0.952
-W = 26
-H = 30
-Tex = Button13
-Color = White
-Type = Transparent
-
-[SongRouletteTextParty1]
-X = 230
-Y = 547
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SONG_MENU_NAME_PARTY_JOKER
-Reflection = 0
-ReflectionSpacing = 13
-
-# menu
-[SongRouletteStaticParty2]
-X = 390
-Y = 545
-Z = 0.952
-W = 26
-H = 30
-Tex = ButtonM
-Color = White
-Type = Transparent
-
-[SongRouletteTextParty2]
-X = 420
-Y = 547
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = PARTY_SONG_MENU
-Reflection = 0
-ReflectionSpacing = 13
-
 #Texts for Party Mode
-[SongRouletteTextParty3]
-X = 70
-Y = 5
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE
+[SongRouletteTextParty1]
+Inheritance = PartyOptionsText1
 
 # Jokers, 5 for each team, only shown in party Mode
 [SongRouletteStaticTeamJoker]
@@ -1795,110 +1743,8 @@ Y = 550
 Size = 11
 
 #and these are the ones for partymode
-# NAVBAR for party
-# enter a number
-[SongChessboardStaticParty1]
-X = 232
-Y = 561
-Z = 0.952
-W = 26
-H = 28
-Tex = Button13
-Color = White
-Type = Transparent
-
 [SongChessboardTextParty1]
-X = 262
-Y = 562
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SONG_MENU_NAME_PARTY_JOKER
-Reflection = 0
-ReflectionSpacing = 13
-
-# menu
-[SongChessboardStaticParty2]
-X = 410
-Y = 561
-Z = 0.952
-W = 26
-H = 28
-Tex = ButtonM
-Color = White
-Type = Transparent
-
-[SongChessboardTextParty2]
-X = 440
-Y = 562
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = PARTY_SONG_MENU
-Reflection = 0
-ReflectionSpacing = 13
-
-#Texts for Party Mode
-[SongChessboardStaticParty1]
-X = 232
-Y = 561
-Z = 0.952
-W = 26
-H = 28
-Tex = Button13
-Color = White
-Type = Transparent
-
-[SongChessboardTextParty1]
-X = 262
-Y = 562
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SONG_MENU_NAME_PARTY_JOKER
-Reflection = 0
-ReflectionSpacing = 13
-
-# menu
-[SongChessboardStaticParty3]
-X = 410
-Y = 561
-Z = 0.952
-W = 26
-H = 28
-Tex = ButtonM
-Color = White
-Type = Transparent
-
-[SongChessboardTextParty3]
-X = 440
-Y = 562
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = PARTY_SONG_MENU
-Reflection = 0
-ReflectionSpacing = 13
-
-#Texts for Party Mode
-[SongChessboardTextParty4]
-X = 30
-Y = 15
-ColR = 0.7
-ColG = 0.7
-ColB = 0.7
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE
+Inheritance = PartyOptionsText1
 
 # Jokers, 5 for each team, only shown in party Mode
 [SongChessboardStaticTeamJoker]
@@ -2150,64 +1996,8 @@ Inheritance = SongText3PlayersDuetSingerP2
 Inheritance = SongText3PlayersDuetSingerP3
 
 #and these are the ones for partymode
-# NAVBAR for party
-# enter a number
-[SongCarouselStaticParty1]
-X = 245
-Y = 555
-Z = 0.952
-W = 25
-H = 28
-Tex = Button13
-Color = White
-Type = Transparent
-
 [SongCarouselTextParty1]
-X = 278
-Y = 555
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SONG_MENU_NAME_PARTY_JOKER
-Reflection = 0
-ReflectionSpacing = 13
-
-# menu
-[SongCarouselStaticParty2]
-X = 420
-Y = 555
-Z = 0.952
-W = 25
-H = 28
-Tex = ButtonM
-Color = White
-Type = Transparent
-
-[SongCarouselTextParty2]
-X = 448
-Y = 555
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = PARTY_SONG_MENU
-Reflection = 0
-ReflectionSpacing = 13
-
-#Texts for Party Mode
-[SongCarouselTextParty3]
-X = 30
-Y = 30
-ColR = 0.7
-ColG = 0.7
-ColB = 0.7
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE
+Inheritance = PartyOptionsText1
 
 # Jokers, 5 for each team, only shown in party Mode
 [SongCarouselStaticTeamJoker]
@@ -2539,64 +2329,8 @@ Inheritance = SongText3PlayersDuetSingerP2
 Inheritance = SongText3PlayersDuetSingerP3
 
 #and these are the ones for partymode
-# NAVBAR for party
-# enter a number
-[SongSlotMachineStaticParty1]
-X = 245
-Y = 555
-Z = 0.952
-W = 25
-H = 28
-Tex = Button13
-Color = White
-Type = Transparent
-
 [SongSlotMachineTextParty1]
-X = 278
-Y = 555
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SONG_MENU_NAME_PARTY_JOKER
-Reflection = 0
-ReflectionSpacing = 13
-
-# menu
-[SongSlotMachineStaticParty2]
-X = 420
-Y = 555
-Z = 0.952
-W = 25
-H = 28
-Tex = ButtonM
-Color = White
-Type = Transparent
-
-[SongSlotMachineTextParty2]
-X = 448
-Y = 555
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = PARTY_SONG_MENU
-Reflection = 0
-ReflectionSpacing = 13
-
-#Texts for Party Mode
-[SongSlotMachineTextParty3]
-X = 30
-Y = 30
-ColR = 0.7
-ColG = 0.7
-ColB = 0.7
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE
+Inheritance = PartyOptionsText1
 
 # Jokers, 5 for each team, only shown in party Mode
 [SongSlotMachineStaticTeamJoker]
@@ -2876,105 +2610,8 @@ Inheritance = SongText3PlayersDuetSingerP2
 [SongSlideText3PlayersDuetSingerP3]
 Inheritance = SongText3PlayersDuetSingerP3
 
-#and these are the ones for partymode
-[SongSlideStaticParty1]
-X = 40
-Y = 22
-W = 27
-H = 27
-Color = White
-Tex = PartyIcon
-Type = Colorized
-
-# NAVBAR for party
-# enter a number
-[SongSlideStaticParty2]
-X = 260
-Y = 545
-Z = 0.952
-W = 32
-H = 30
-Tex = Button13
-Color = White
-Type = Transparent
-
-[SongSlideTextParty3]
-X = 300
-Y = 548
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SONG_MENU_NAME_PARTY_JOKER
-Reflection = 1
-ReflectionSpacing = 13
-
-# menu
-[SongSlideStaticParty3]
-X = 400
-Y = 552
-Z = 0.952
-W = 24
-H = 23
-Tex = ButtonM
-Color = White
-Type = Transparent
-
-[SongSlideTextParty4]
-X = 426
-Y = 548
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = PARTY_SONG_MENU
-Reflection = 1
-ReflectionSpacing = 13
-
-[SongSlideStaticParty4]
-X = 540
-Y = 552
-Z = 0.952
-W = 24
-H = 24
-Tex = ButtonEnter
-Color = White
-Type = Transparent
-
-[SongSlideTextParty5]
-X = 570
-Y = 548
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = PARTY_SONG_LEGEND_CONTINUE
-Reflection = 1
-ReflectionSpacing = 13
-
-#Texts for Party Mode
 [SongSlideTextParty1]
-X = 70
-Y = 5
-ColR = 0.7
-ColG = 0.7
-ColB = 0.7
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE
-
-[SongSlideTextParty2]
-X = 238
-Y = 548
-Color = White
-Font = 0
-Size = 21
-Align = 2
-Text = PARTY_SONG_WHEREAMI
-#variable statics end
+Inheritance = PartyOptionsText1
 
 # Jokers, 5 for each team, only shown in party Mode
 [SongSlideStaticTeamJoker]
@@ -3360,105 +2997,9 @@ Inheritance = SongText3PlayersDuetSingerP3
 X = 675
 Y = 465
 
-#and these are the ones for partymode
-[SongListStaticParty1]
-X = 40
-Y = 22
-W = 27
-H = 27
-Color = White
-Tex = PartyIcon
-Type = Colorized
-
-# NAVBAR for party
-# enter a number
-[SongListStaticParty2]
-X = 260
-Y = 545
-Z = 0.952
-W = 32
-H = 30
-Tex = Button13
-Color = White
-Type = Transparent
-
-[SongListTextParty3]
-X = 300
-Y = 548
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SONG_MENU_NAME_PARTY_JOKER
-Reflection = 1
-ReflectionSpacing = 13
-
-# menu
-[SongListStaticParty3]
-X = 400
-Y = 552
-Z = 0.952
-W = 24
-H = 23
-Tex = ButtonM
-Color = White
-Type = Transparent
-
-[SongListTextParty4]
-X = 426
-Y = 548
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = PARTY_SONG_MENU
-Reflection = 1
-ReflectionSpacing = 13
-
-[SongListStaticParty4]
-X = 540
-Y = 552
-Z = 0.952
-W = 24
-H = 24
-Tex = ButtonEnter
-Color = White
-Type = Transparent
-
-[SongListTextParty5]
-X = 570
-Y = 548
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = PARTY_SONG_LEGEND_CONTINUE
-Reflection = 1
-ReflectionSpacing = 13
-
 #Texts for Party Mode
 [SongListTextParty1]
-X = 70
-Y = 5
-ColR = 0.7
-ColG = 0.7
-ColB = 0.7
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE
-
-[SongListTextParty2]
-X = 238
-Y = 548
-Color = White
-Font = 0
-Size = 21
-Align = 2
-Text = PARTY_SONG_WHEREAMI
-#variable statics end
+Inheritance = PartyOptionsText1
 
 # Jokers, 5 for each team, only shown in party Mode
 [SongListStaticTeamJoker]
@@ -3832,106 +3373,9 @@ X = 692
 Y = 465
 
 #and these are the ones for partymode
-[SongMosaicStaticParty1]
-X = 40
-Y = 22
-W = 27
-H = 27
-Color = White
-Tex = PartyIcon
-Type = Colorized
-
-# NAVBAR for party
-# enter a number
-[SongMosaicStaticParty2]
-X = 260
-Y = 545
-Z = 0.952
-W = 32
-H = 30
-Tex = Button13
-Color = White
-Type = Transparent
-
-[SongMosaicTextParty3]
-X = 300
-Y = 548
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SONG_MENU_NAME_PARTY_JOKER
-Reflection = 1
-ReflectionSpacing = 13
-
-# menu
-[SongMosaicStaticParty3]
-X = 400
-Y = 552
-Z = 0.952
-W = 24
-H = 23
-Tex = ButtonM
-Color = White
-Type = Transparent
-
-[SongMosaicTextParty4]
-X = 426
-Y = 548
-Z = 0.952
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = PARTY_SONG_MENU
-Reflection = 1
-ReflectionSpacing = 13
-
-[SongMosaicStaticParty4]
-X = 540
-Y = 552
-Z = 0.952
-W = 24
-H = 24
-Tex = ButtonEnter
-Color = White
-Type = Transparent
-
-[SongMosaicTextParty5]
-X = 570
-Y = 548
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = PARTY_SONG_LEGEND_CONTINUE
-Reflection = 1
-ReflectionSpacing = 13
-
-#Texts for Party Mode
 [SongMosaicTextParty1]
-X = 70
-Y = 5
-ColR = 0.7
-ColG = 0.7
-ColB = 0.7
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE
+Inheritance = PartyOptionsText1
 
-[SongMosaicTextParty2]
-X = 238
-Y = 548
-Color = White
-Font = 0
-Size = 21
-Align = 2
-Text = PARTY_SONG_WHEREAMI
-#variable statics end
-
-# Jokers, 5 for each team, only shown in party Mode
 [SongMosaicStaticTeamJoker]
 Inheritance = SongStaticTeamJoker
 X = 590
@@ -5197,50 +4641,6 @@ Font = 0
 Size = 30
 Align = 0
 Text = ArtistTitle
-
-[ScoreStatic1]
-X = 323
-Y = 550
-W = 27
-H = 30
-Tex = ButtonEnter
-Color = White
-Type = Transparent
-Reflection = 0
-ReflectionSpacing = 2
-
-[ScoreText2]
-X = 360
-Y = 553
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Text = SING_LEGEND_CONTINUE
-Reflection = 0
-ReflectionSpacing = 13
-#end of main stuff
-
-[ScoreStaticNavigate]
-X = 440
-Y = 552
-W = 32
-H = 30
-Z = 0.5
-Tex = ButtonNavi
-Color = White
-Type = Transparent
-
-[ScoreTextNavigate]
-X = 480
-Y = 552
-Z = 0.5
-Color = White
-Font = 0
-Style = 0
-Size = 24
-Align = 0
-Text = SING_LEGEND_NAVIGATE
 
 # # # # # # # # # # # # # # # # # # One Player Score # # # # # # # # # # # #
 [ScoreTextName1]
@@ -7635,31 +7035,12 @@ Texts = 5
 Tex = PartyBG
 
 [PartyOptionsText1]
-X = 40
-Y = 20
+X = 70
+Y = 5
 Font = 0
 Size = 60
 Color = White
 Text = PARTY_MODE
-
-[PartyOptionsStatic1]
-X = 370
-Y = 552
-Z = 0.75
-W = 20
-H = 23
-Tex = ButtonEnter
-Color = White
-Type = Transparent
-
-[PartyOptionsText2]
-X = 395
-Y = 552
-Color = White
-Font = 0
-Size = 21
-Align = 0
-Text = SING_LEGEND_CONTINUE
 
 [PartyOptionsSelectMode]
 Tex = MainBar
@@ -7798,23 +7179,8 @@ Texts = 6
 [PartyPlayerBackground]
 Tex = PartyBG
 
-[PartyPlayerStatic1]
-X = 370
-Y = 552
-Z = 0.75
-W = 20
-H = 23
-Tex = ButtonEnter
-Color = White
-Type = Transparent
-
 [PartyPlayerText1]
-X = 40
-Y = 20
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE
+Inheritance = PartyOptionsText1
 
 [PartyPlayerText2]
 X = 70
@@ -7824,15 +7190,6 @@ Font = 0
 Size = 21
 Align = 0
 Text = PARTY_PLAYER_ENTER_NAME
-
-[PartyPlayerText3]
-X = 395
-Y = 552
-Color = White
-Font = 0
-Size = 21
-Align = 0
-Text = SING_LEGEND_CONTINUE
 
 [PartyPlayerSelectTeams]
 Tex = MainBar
@@ -8252,22 +7609,8 @@ Color = White
 [PartyRoundsBackground]
 Tex = PartyBG
 
-[PartyRoundsStatic1]
-X = 388
-Y = 552
-W = 20
-H = 23
-Tex = ButtonEnter
-Color = White
-Type = Transparent
-
 [PartyRoundsText1]
-X = 40
-Y = 20
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE
+Inheritance = PartyOptionsText1
 
 [PartyRoundsText2]
 X = 418
@@ -8472,12 +7815,7 @@ Texts = 4
 Tex = MainBG
 
 [PartyNewRoundText1]
-X = 50
-Y = 10
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE
+Inheritance = PartyOptionsText1
 
 [PartyNewRoundText2]
 X = 400
@@ -8552,15 +7890,6 @@ Color = ColorDark
 Type = Colorized
 
 [PartyNewRoundStatic5]
-X = 260
-Y = 552
-W = 24
-H = 23
-Tex = ButtonEnter
-Color = White
-Type = Transparent
-
-[PartyNewRoundStatic6]
 Tex = PartyRoundBG3
 X = 250
 Y = 350
@@ -8569,7 +7898,7 @@ H = 50
 Color = ColorLight
 Type = Colorized
 
-[PartyNewRoundStatic7]
+[PartyNewRoundStatic6]
 Tex = PartyRoundBG4
 X = 50
 Y = 495
@@ -8954,34 +8283,8 @@ ThirdTexture = PartyScoreDeco
 ThirdTyp = Colorized
 ThirdColor = Bronze
 
-[PartyScoreStatic3]
-X = 40
-Y = 22
-W = 27
-H = 27
-Color = White
-Tex = PartyIcon
-Type = Colorized
-
-[PartyScoreStatic4]
-X = 260
-Y = 552
-W = 24
-H = 23
-Tex = ButtonEnter
-Color = White
-Type = Transparent
-
 [PartyScoreText1]
-X = 70
-Y = 6
-ColR = 0.7
-ColG = 0.7
-ColB = 0.7
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE
+Inheritance = PartyOptionsText1
 
 [PartyScoreText2]
 X = 70
@@ -9010,7 +8313,7 @@ Size = 21
 Align = 0
 Text = PARTY_LEGEND_CONTINUE
 
-[PartyScoreStatic5]
+[PartyScoreStatic4]
 Tex = PartyScoreBG1
 X = 50
 Y = 100
@@ -9019,7 +8322,7 @@ H = 80
 Color = ColorDark
 Type = Colorized
 
-[PartyScoreStatic6]
+[PartyScoreStatic5]
 Tex = PartyScoreBG2
 X = 50
 Y = 495
@@ -9211,34 +8514,8 @@ Texts = 4
 [PartyWinBackground]
 Tex = PartyBG
 
-[PartyWinStatic3]
-X = 40
-Y = 22
-W = 27
-H = 27
-Color = White
-Tex = PartyIcon
-Type = Colorized
-
-[PartyWinStatic4]
-X = 260
-Y = 552
-W = 24
-H = 23
-Tex = ButtonEnter
-Color = White
-Type = Transparent
-
 [PartyWinText1]
-X = 70
-Y = 6
-ColR = 0.7
-ColG = 0.7
-ColB = 0.7
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE
+Inheritance = PartyOptionsText1
 
 [PartyWinText2]
 X = 70
@@ -9646,54 +8923,8 @@ Texts = 5
 [PartyTournamentPlayerBackground]
 Tex = PartyBG
 
-[PartyTournamentPlayerStatic3]
-X = 40
-Y = 22
-W = 27
-H = 27
-Color = White
-Tex = PartyIcon
-Type = Colorized
-
-[PartyTournamentPlayerStatic4]
-X = 260
-Y = 552
-Z = 0.75
-W = 24
-H = 23
-Tex = ButtonNavi
-Color = White
-Type = Transparent
-
-[PartyTournamentPlayerStatic5]
-X = 388
-Y = 552
-Z = 0.75
-W = 32
-H = 23
-Tex = ButtonAZ
-Color = White
-Type = Transparent
-
-[PartyTournamentPlayerStatic6]
-X = 556
-Y = 552
-Z = 0.75
-W = 24
-H = 23
-Tex = ButtonEnter
-Color = White
-Type = Transparent
-
 [PartyTournamentPlayerText1]
-X = 70
-Y = 6
-ColR = 0.7
-ColG = 0.7
-ColB = 0.7
-Font = 0
-Size = 60
-Color = White
+Inheritance = PartyOptionsText1
 Text = PARTY_MODE_TOURNAMENT
 
 [PartyTournamentPlayerText2]
@@ -9704,33 +8935,6 @@ Font = 0
 Size = 30
 Align = 0
 Text = PARTY_MODE_TOURNAMENT_PLAYER_DESC
-
-[PartyTournamentPlayerText3]
-X = 294
-Y = 552
-Color = White
-Font = 0
-Size = 21
-Align = 0
-Text = SING_LEGEND_NAVIGATE
-
-[PartyTournamentPlayerText4]
-X = 418
-Y = 552
-Color = White
-Font = 0
-Size = 21
-Align = 0
-Text = PARTY_PLAYER_ENTER_NAME
-
-[PartyTournamentPlayerText5]
-X = 586
-Y = 552
-Color = White
-Font = 0
-Size = 21
-Align = 0
-Text = SING_LEGEND_CONTINUE
 
 [PartyTournamentPlayerSelectPlayers]
 Text = PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS
@@ -10120,44 +9324,8 @@ Texts = 4
 [PartyTournamentOptionsBackground]
 Tex = PartyBG
 
-
-[PartyTournamentOptionsStatic3]
-X = 40
-Y = 22
-W = 27
-H = 27
-Color = White
-Tex = PartyIcon
-Type = Colorized
-
-[PartyTournamentOptionsStatic4]
-X = 260
-Y = 552
-W = 24
-H = 23
-Tex = ButtonNavi
-Color = White
-Type = Transparent
-
-[PartyTournamentOptionsStatic5]
-X = 388
-Y = 552
-W = 24
-H = 23
-Tex = ButtonEnter
-Color = White
-Type = Transparent
-
 [PartyTournamentOptionsText1]
-X = 70
-Y = 5
-ColR = 0.7
-ColG = 0.7
-ColB = 0.7
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE_TOURNAMENT
+Inheritance = PartyTournamentPlayerText1
 
 [PartyTournamentOptionsText2]
 X = 70
@@ -10167,24 +9335,6 @@ Font = 0
 Size = 30
 Align = 0
 Text = PARTY_MODE_TOURNAMENT_OPTIONS_DESC
-
-[PartyTournamentOptionsText3]
-X = 294
-Y = 552
-Color = White
-Font = 0
-Size = 21
-Align = 0
-Text = SING_LEGEND_NAVIGATE
-
-[PartyTournamentOptionsText4]
-X = 418
-Y = 552
-Color = White
-Font = 0
-Size = 21
-Align = 0
-Text = SING_LEGEND_CONTINUE
 
 [PartyTournamentOptionsSelectRoundsFinal]
 Tex = MainBar
@@ -10285,25 +9435,7 @@ Texts = 3
 [PartyTournamentRoundsBackground]
 Tex = PartyBG
 
-[PartyTournamentRoundsStatic3]
-X = 40
-Y = 22
-W = 27
-H = 27
-Color = White
-Tex = PartyIcon
-Type = Colorized
-
-[PartyTournamentRoundsStatic4]
-X = 260
-Y = 552
-W = 24
-H = 23
-Tex = ButtonEnter
-Color = White
-Type = Transparent
-
-[PartyTournamentRoundsStatic5]
+[PartyTournamentRoundsStatic1]
 X = 310
 Y = 180
 W = 270
@@ -10312,7 +9444,7 @@ Tex = PartyTrophy
 Color = White
 Type = Transparent
 
-[PartyTournamentRoundsStatic6]
+[PartyTournamentRoundsStatic2]
 X = 300
 Y = 450
 W = 200
@@ -10323,15 +9455,7 @@ Type = Transparent
 Texts = 1
 
 [PartyTournamentRoundsText1]
-X = 70
-Y = 5
-ColR = 0.7
-ColG = 0.7
-ColB = 0.7
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE_TOURNAMENT
+Inheritance = PartyTournamentPlayerText1
 
 [PartyTournamentRoundsText2]
 X = 70
@@ -10341,15 +9465,6 @@ Font = 0
 Size = 30
 Align = 0
 Text = PARTY_MODE_TOURNAMENT_ROUNDS_DESC
-
-[PartyTournamentRoundsText3]
-X = 294
-Y = 552
-Color = White
-Font = 0
-Size = 21
-Align = 0
-Text = SING_LEGEND_CONTINUE
 
 [PartyTournamentRoundsTextNameBlock1Player1]
 Tex = Button
@@ -10732,34 +9847,8 @@ Texts = 3
 [PartyTournamentWinBackground]
 Tex = PartyBG
 
-[PartyTournamentWinStatic3]
-X = 40
-Y = 22
-W = 27
-H = 27
-Color = White
-Tex = PartyIcon
-Type = Colorized
-
-[PartyTournamentWinStatic4]
-X = 260
-Y = 552
-W = 24
-H = 23
-Tex = ButtonEnter
-Color = White
-Type = Transparent
-
 [PartyTournamentWinText1]
-X = 70
-Y = 6
-ColR = 0.7
-ColG = 0.7
-ColB = 0.7
-Font = 0
-Size = 60
-Color = White
-Text = PARTY_MODE_TOURNAMENT
+Inheritance = PartyTournamentPlayerText1
 
 [PartyTournamentWinText2]
 X = 70
@@ -10769,15 +9858,6 @@ Font = 0
 Size = 30
 Align = 0
 Text = PARTY_MODE_TOURNAMENT_WIN_DESC
-
-[PartyTournamentWinText3]
-X = 290
-Y = 552
-Color = White
-Font = 0
-Size = 21
-Align = 0
-Text = SING_LEGEND_CONTINUE
 
 [PartyTournamentWinTextScorePlayer1]
 X = 620
@@ -10847,15 +9927,6 @@ Texts = 5
 
 [JukeboxPlaylistBackground]
 Tex = PartyBG
-
-[JukeboxPlaylistStatic1]
-X = 388
-Y = 552
-W = 24
-H = 23
-Tex = ButtonEnter
-Color = White
-Type = Transparent
 
 [JukeboxPlaylistText1]
 X = 70
@@ -12518,48 +11589,6 @@ Y = 40
 Color = White
 Size = 45
 Text = C_NETWORK
-
-[OptionsNetworkStatic5]
-X = 400
-Y = 545
-W = 32
-H = 30
-Tex = ButtonIns
-Color = White
-Type = Transparent
-Reflection = 1
-ReflectionSpacing = 2
-
-[OptionsNetworkText5]
-X = 440
-Y = 548
-Z = 0.5
-Color = White
-Size = 24
-Reflection = 1
-ReflectionSpacing = 20
-Text = SING_OPTIONS_NETWORK_LEGEND_INSERT
-
-[OptionsNetworkStatic6]
-X = 530
-Y = 545
-W = 32
-H = 30
-Tex = ButtonDel
-Color = White
-Type = Transparent
-Reflection = 1
-ReflectionSpacing = 2
-
-[OptionsNetworkText6]
-X = 570
-Y = 548
-Z = 0.5
-Color = White
-Size = 24
-Reflection = 1
-ReflectionSpacing = 20
-Text = SING_OPTIONS_NETWORK_LEGEND_DELETE
 
 [OptionsNetworkTextInsertUser]
 X = 400
