Changed F6 behaviour to update song/songs scores and fixed their position and visibility

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -973,85 +973,68 @@ H = 14
 Tex = icon_song_unvalidated
 
 [SongTextMyScores]
-X = 345
-Y = 430
+X = 300
+Y = 425
+W = 118
 Color = White
 Font = 0
 Size = 14
-Align = 1
 Text = SING_SONGS_MYSCORES
 
 [SongTextWebsite]
 Inheritance = SongTextMyScores
-X = 455
-
-#Local scores
+X = 420
 
 [SongTextLocalScore1]
-X = 335
-Y = 450
+X = 303
+Y = 445
 Color = White
 Font = 0
 Size = 12
-Align = 2
 
 [SongTextLocalScore2]
 Inheritance = SongTextLocalScore1
-Y = 470
+Y = 465
 
 [SongTextLocalScore3]
 Inheritance = SongTextLocalScore1
-Y = 490
+Y = 485
 
 [SongTextUserLocalScore1]
-X = 345
-Y = 450
-Color = White
-Font = 0
-Size = 12
-Align = 0
+Inheritance = SongTextLocalScore1
+X = 325
 
 [SongTextUserLocalScore2]
 Inheritance = SongTextUserLocalScore1
-Y = 470
+Y = 465
 
 [SongTextUserLocalScore3]
 Inheritance = SongTextUserLocalScore1
-Y = 490
-
-#Online Score
+Y = 485
 
 [SongTextOnlineScore1]
-X = 445
-Y = 450
-Color = White
-Font = 0
-Size = 12
-Align = 2
+Inheritance = SongTextLocalScore1
+X = 423
 
 [SongTextOnlineScore2]
 Inheritance = SongTextOnlineScore1
-Y = 470
+Y = 465
 
 [SongTextOnlineScore3]
 Inheritance = SongTextOnlineScore1
-Y = 490
+Y = 485
 
 [SongTextUserOnlineScore1]
-X = 455
-Y = 450
-Color = White
-Font = 0
-Size = 12
-Align = 0
+Inheritance = SongTextOnlineScore1
+X = 445
 
 [SongTextUserOnlineScore2]
 Inheritance = SongTextUserOnlineScore1
-Y = 470
+Y = 465
 
 [SongTextUserOnlineScore3]
 Inheritance = SongTextUserOnlineScore1
-Y = 490
+Y = 485
 
 ########################################################################################
 ##### 																			   #####
@@ -1189,8 +1172,6 @@ Inheritance = SongTextMyScores
 [SongRouletteTextWebsite]
 Inheritance = SongTextWebsite
 
-#Local scores:
-
 [SongRouletteTextLocalScore1]
 Inheritance = SongTextLocalScore1
 
@@ -1208,8 +1189,6 @@ Inheritance = SongTextUserLocalScore2
 
 [SongRouletteTextUserLocalScore3]
 Inheritance = SongTextUserLocalScore3
-
-#Online Scores:
 
 [SongRouletteTextOnlineScore1]
 Inheritance = SongTextOnlineScore1
@@ -1436,12 +1415,12 @@ Y = 390
 [SongChessboardCreatorIcon]
 Inheritance = SongCreatorIcon
 X = 10
-Y = 423
+Y = 440
 
 [SongChessboardFixerIcon]
 Inheritance = SongFixerIcon
 X = 10
-Y = 450
+Y = 465
 
 [SongChessboardUnvalidatedIcon]
 Inheritance = SongUnvalidatedIcon
@@ -1486,89 +1465,73 @@ Y = 390
 [SongChessboardTextCreator]
 Inheritance = SongRouletteTextCreator
 X = 30
-Y = 425
+Y = 440
 
 [SongChessboardTextFixer]
 Inheritance = SongRouletteTextFixer
 X = 30
-Y = 450
+Y = 465
 
 [SongChessboardTextMyScores]
 Inheritance = SongTextMyScores
-X = 10
-Y = 480
-Align = 0
+X = 15
+Y = 500
 
 [SongChessboardTextWebsite]
-Inheritance = SongTextWebsite
-X = 110
-Y = 480
-Align = 0
-#Local scores:
+Inheritance = SongChessboardTextMyScores
+X = 115
 
 [SongChessboardTextLocalScore1]
 Inheritance = SongTextLocalScore1
-X = 35
-Y = 510
-
+X = 18
+Y = 520
 
 [SongChessboardTextLocalScore2]
-Inheritance = SongTextLocalScore2
-X = 35
-Y = 530
+Inheritance = SongChessboardTextLocalScore1
+Y = 540
 
 [SongChessboardTextLocalScore3]
-Inheritance = SongTextLocalScore3
-X = 35
-Y = 550
-Align = 2
+Inheritance = SongChessboardTextLocalScore1
+Y = 560
 
 [SongChessboardTextUserLocalScore1]
 Inheritance = SongTextUserLocalScore1
 X = 45
-Y = 510
+Y = 520
 
 [SongChessboardTextUserLocalScore2]
-Inheritance = SongTextUserLocalScore2
-X = 45
-Y = 530
+Inheritance = SongChessboardTextUserLocalScore1
+Y = 540
 
 [SongChessboardTextUserLocalScore3]
-Inheritance = SongTextUserLocalScore3
-X = 45
-Y = 550
+Inheritance = SongChessboardTextUserLocalScore1
+Y = 560
 
-#Online Scores:
 [SongChessboardTextOnlineScore1]
 Inheritance = SongTextOnlineScore1
-X = 130
-Y = 510
+X = 118
+Y = 520
 
 [SongChessboardTextOnlineScore2]
-Inheritance = SongTextOnlineScore2
-X = 130
-Y = 530
+Inheritance = SongChessboardTextOnlineScore1
+Y = 540
 
 [SongChessboardTextOnlineScore3]
-Inheritance = SongTextOnlineScore3
-X = 130
-Y = 550
+Inheritance = SongChessboardTextOnlineScore1
+Y = 560
 
 [SongChessboardTextUserOnlineScore1]
 Inheritance = SongTextUserOnlineScore1
 X = 140
-Y = 510
+Y = 520
 
 [SongChessboardTextUserOnlineScore2]
-Inheritance = SongTextUserOnlineScore2
-X = 140
-Y = 530
+Inheritance = SongChessboardTextUserOnlineScore1
+Y = 540
 
 [SongChessboardTextUserOnlineScore3]
-Inheritance = SongTextUserOnlineScore3
-X = 140
-Y = 550
-
+Inheritance = SongChessboardTextUserOnlineScore1
+Y = 560
 
 [SongChessboardStatic2PlayersDuetSingerP1]
 Inheritance = SongStatic2PlayersDuetSingerP1
@@ -1798,8 +1761,6 @@ Inheritance = SongTextMyScores
 [SongCarouselTextWebsite]
 Inheritance = SongTextWebsite
 
-#Local scores:
-
 [SongCarouselTextLocalScore1]
 Inheritance = SongTextLocalScore1
 
@@ -1817,8 +1778,6 @@ Inheritance = SongTextUserLocalScore2
 
 [SongCarouselTextUserLocalScore3]
 Inheritance = SongTextUserLocalScore3
-
-#Online Scores:
 
 [SongCarouselTextOnlineScore1]
 Inheritance = SongTextOnlineScore1
@@ -2059,28 +2018,22 @@ Y = 227
 Inheritance = SongTextMyScores
 X = 520
 Y = 255
-Align = 0
 
 [SongSlotMachineTextWebsite]
-Inheritance = SongTextWebsite
-X = 680
-Y = 255
-
-#Local scores:
+Inheritance = SongSlotMachineTextMyScores
+X = 640
 
 [SongSlotMachineTextLocalScore1]
 Inheritance = SongTextLocalScore1
-X = 540
+X = 523
 Y = 275
 
 [SongSlotMachineTextLocalScore2]
-Inheritance = SongTextLocalScore2
-X = 540
+Inheritance = SongSlotMachineTextLocalScore1
 Y = 295
 
 [SongSlotMachineTextLocalScore3]
-Inheritance = SongTextLocalScore3
-X = 540
+Inheritance = SongSlotMachineTextLocalScore1
 Y = 315
 
 [SongSlotMachineTextUserLocalScore1]
@@ -2089,45 +2042,37 @@ X = 550
 Y = 275
 
 [SongSlotMachineTextUserLocalScore2]
-Inheritance = SongTextUserLocalScore2
-X = 550
+Inheritance = SongSlotMachineTextUserLocalScore1
 Y = 295
 
 [SongSlotMachineTextUserLocalScore3]
-Inheritance = SongTextUserLocalScore3
-X = 550
+Inheritance = SongSlotMachineTextUserLocalScore1
 Y = 315
-
-#Online Scores:
 
 [SongSlotMachineTextOnlineScore1]
 Inheritance = SongTextOnlineScore1
-X = 665
+X = 643
 Y = 275
 
 [SongSlotMachineTextOnlineScore2]
-Inheritance = SongTextOnlineScore2
-X = 665
+Inheritance = SongSlotMachineTextOnlineScore1
 Y = 295
 
 [SongSlotMachineTextOnlineScore3]
-Inheritance = SongTextOnlineScore3
-X = 665
+Inheritance = SongSlotMachineTextOnlineScore1
 Y = 315
 
 [SongSlotMachineTextUserOnlineScore1]
 Inheritance = SongTextUserOnlineScore1
-X = 675
+X = 670
 Y = 275
 
 [SongSlotMachineTextUserOnlineScore2]
-Inheritance = SongTextUserOnlineScore2
-X = 675
+Inheritance = SongSlotMachineTextUserOnlineScore1
 Y = 295
 
 [SongSlotMachineTextUserOnlineScore3]
-Inheritance = SongTextUserOnlineScore3
-X = 675
+Inheritance = SongSlotMachineTextUserOnlineScore1
 Y = 315
 
 #Duet singers
@@ -2319,8 +2264,6 @@ Inheritance = SongTextMyScores
 [SongSlideTextWebsite]
 Inheritance = SongTextWebsite
 
-#Local scores:
-
 [SongSlideTextLocalScore1]
 Inheritance = SongTextLocalScore1
 
@@ -2338,8 +2281,6 @@ Inheritance = SongTextUserLocalScore2
 
 [SongSlideTextUserLocalScore3]
 Inheritance = SongTextUserLocalScore3
-
-#Online Scores:
 
 [SongSlideTextOnlineScore1]
 Inheritance = SongTextOnlineScore1
@@ -2605,29 +2546,24 @@ Y = 556
 
 [SongListTextMyScores]
 Inheritance = SongTextMyScores
-X = 610
+X = 580
 Y = 280
 
 [SongListTextWebsite]
-Inheritance = SongTextWebsite
-X = 735
-Y = 280
-
-#Local scores:
+Inheritance = SongListTextMyScores
+X = 690
 
 [SongListTextLocalScore1]
 Inheritance = SongTextLocalScore1
-X = 595
+X = 583
 Y = 300
 
 [SongListTextLocalScore2]
-Inheritance = SongTextLocalScore2
-X = 595
+Inheritance = SongListTextLocalScore1
 Y = 320
 
 [SongListTextLocalScore3]
-Inheritance = SongTextLocalScore3
-X = 595
+Inheritance = SongListTextLocalScore1
 Y = 340
 
 [SongListTextUserLocalScore1]
@@ -2636,45 +2572,37 @@ X = 605
 Y = 300
 
 [SongListTextUserLocalScore2]
-Inheritance = SongTextUserLocalScore2
-X = 605
+Inheritance = SongListTextUserLocalScore1
 Y = 320
 
 [SongListTextUserLocalScore3]
-Inheritance = SongTextUserLocalScore3
-X = 605
+Inheritance = SongListTextUserLocalScore1
 Y = 340
-
-#Online Scores:
 
 [SongListTextOnlineScore1]
 Inheritance = SongTextOnlineScore1
-X = 720
+X = 693
 Y = 300
 
 [SongListTextOnlineScore2]
-Inheritance = SongTextOnlineScore2
-X = 720
+Inheritance = SongListTextOnlineScore1
 Y = 320
 
 [SongListTextOnlineScore3]
-Inheritance = SongTextOnlineScore3
-X = 720
+Inheritance = SongListTextOnlineScore1
 Y = 340
 
 [SongListTextUserOnlineScore1]
 Inheritance = SongTextUserOnlineScore1
-X = 730
+X = 720
 Y = 300
 
 [SongListTextUserOnlineScore2]
-Inheritance = SongTextUserOnlineScore2
-X = 730
+Inheritance = SongListTextUserOnlineScore1
 Y = 320
 
 [SongListTextUserOnlineScore3]
-Inheritance = SongTextUserOnlineScore3
-X = 730
+Inheritance = SongListTextUserOnlineScore1
 Y = 340
 
 #Duet singers
@@ -2930,70 +2858,58 @@ Y = 512
 
 [SongMosaicTextMyScores]
 Inheritance = SongTextMyScores
-Y = 420
+Y = 425
 
 [SongMosaicTextWebsite]
 Inheritance = SongTextWebsite
-X = 460
-Y = 420
-
-#Local scores:
 
 [SongMosaicTextLocalScore1]
 Inheritance = SongTextLocalScore1
-Y = 450
+Y = 445
 
 [SongMosaicTextLocalScore2]
 Inheritance = SongTextLocalScore2
-Y = 470
+Y = 465
 
 [SongMosaicTextLocalScore3]
 Inheritance = SongTextLocalScore3
-Y = 490
+Y = 485
 
 [SongMosaicTextUserLocalScore1]
 Inheritance = SongTextUserLocalScore1
-Y = 450
+Y = 445
 
 [SongMosaicTextUserLocalScore2]
 Inheritance = SongTextUserLocalScore2
-Y = 470
+Y = 465
 
 [SongMosaicTextUserLocalScore3]
 Inheritance = SongTextUserLocalScore3
-Y = 490
-
-#Online Scores:
+Y = 485
 
 [SongMosaicTextOnlineScore1]
 Inheritance = SongTextOnlineScore1
-X = 450
-Y = 450
+Y = 445
 
 [SongMosaicTextOnlineScore2]
-Inheritance = SongTextOnlineScore2
-X = 450
-Y = 470
+Inheritance = SongMosaicTextOnlineScore1
+Y = 465
 
 [SongMosaicTextOnlineScore3]
-Inheritance = SongTextOnlineScore3
-X = 450
-Y = 490
+Inheritance = SongMosaicTextOnlineScore1
+Y = 485
 
 [SongMosaicTextUserOnlineScore1]
 Inheritance = SongTextUserOnlineScore1
-X = 460
-Y = 450
+Y = 445
 
 [SongMosaicTextUserOnlineScore2]
-Inheritance = SongTextUserOnlineScore2
-X = 460
-Y = 470
+Inheritance = SongMosaicTextUserOnlineScore1
+Y = 465
 
 [SongMosaicTextUserOnlineScore3]
-Inheritance = SongTextUserOnlineScore3
-X = 460
-Y = 490
+Inheritance = SongMosaicTextUserOnlineScore1
+Y = 485
 
 #Duet singers
 [SongMosaicStatic2PlayersDuetSingerP1]
