Fixed party song list with 3 teams

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -1646,6 +1646,7 @@ Y = 485
 W = 30
 H = 35
 PaddingX = 9
+PaddingY = 3
 
 [SongChessboardTextPartyTime]
 X = 750
@@ -2689,7 +2690,7 @@ Inheritance = PartyOptionsText1
 [SongListStaticTeamJoker]
 Inheritance = SongStaticTeamJoker
 X = 570
-Y = 280
+Y = 260
 PaddingX = 10
 
 [SongListTextPartyTime]
@@ -2994,8 +2995,9 @@ Inheritance = PartyOptionsText1
 [SongMosaicStaticTeamJoker]
 Inheritance = SongStaticTeamJoker
 X = 590
-Y = 450
+Y = 410
 PaddingX = 5
+PaddingY = 5
 
 [SongMosaicTextPartyTime]
 X = 750
