Added unified party subsection title

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -6587,6 +6587,12 @@ Size = 60
 Color = White
 Text = PARTY_MODE
 
+[PartyOptionsText2]
+Inheritance = PartyOptionsText1
+Y = 55
+Size = 30
+Text = PARTY_OPTIONS_DESC
+
 [PartyOptionsSelectMode]
 Tex = MainBar
 Type = Transparent
@@ -6728,12 +6734,7 @@ Tex = PartyBG
 Inheritance = PartyOptionsText1
 
 [PartyPlayerText2]
-X = 70
-Y = 552
-Color = White
-Font = 0
-Size = 21
-Align = 0
+Inheritance = PartyOptionsText2
 Text = PARTY_PLAYER_ENTER_NAME
 
 [PartyPlayerSelectTeams]
@@ -7158,12 +7159,7 @@ Tex = PartyBG
 Inheritance = PartyOptionsText1
 
 [PartyRoundsText2]
-X = 418
-Y = 552
-Color = White
-Font = 0
-Size = 21
-Align = 0
+Inheritance = PartyOptionsText2
 Text = PARTY_ROUNDS_LEGEND_CONTINUE
 
 [PartyRoundsSelectRoundCount]
@@ -7363,12 +7359,7 @@ Tex = MainBG
 Inheritance = PartyOptionsText1
 
 [PartyNewRoundText2]
-X = 400
-Y = 552
-Color = White
-Font = 0
-Size = 21
-Align = 1
+Inheritance = PartyOptionsText2
 Text = PARTY_ROUND_LEGEND_CONTINUE
 
 [PartyNewRoundText3]
@@ -7832,31 +7823,8 @@ ThirdColor = Bronze
 Inheritance = PartyOptionsText1
 
 [PartyScoreText2]
-X = 70
-Y = 53
-Color = White
-Font = 0
-Size = 30
-Align = 0
+Inheritance = PartyOptionsText2
 Text = PARTY_SCORE_DESC
-
-[PartyScoreText3]
-X = 238
-Y = 552
-Color = White
-Font = 0
-Size = 21
-Align = 2
-Text = PARTY_SCORE_WHEREAMI
-
-[PartyScoreText4]
-X = 290
-Y = 552
-Color = White
-Font = 0
-Size = 21
-Align = 0
-Text = PARTY_LEGEND_CONTINUE
 
 [PartyScoreStatic4]
 Tex = PartyScoreBG1
@@ -8063,12 +8031,7 @@ Tex = PartyBG
 Inheritance = PartyOptionsText1
 
 [PartyWinText2]
-X = 70
-Y = 53
-Color = White
-Font = 0
-Size = 30
-Align = 0
+Inheritance = PartyOptionsText2
 Text = PARTY_WIN_DESC
 
 [PartyWinText3]
@@ -8473,12 +8436,7 @@ Inheritance = PartyOptionsText1
 Text = PARTY_MODE_TOURNAMENT
 
 [PartyTournamentPlayerText2]
-X = 65
-Y = 70
-Color = White
-Font = 0
-Size = 30
-Align = 0
+Inheritance = PartyOptionsText2
 Text = PARTY_MODE_TOURNAMENT_PLAYER_DESC
 
 [PartyTournamentPlayerSelectPlayers]
@@ -8873,12 +8831,7 @@ Tex = PartyBG
 Inheritance = PartyTournamentPlayerText1
 
 [PartyTournamentOptionsText2]
-X = 70
-Y = 65
-Color = White
-Font = 0
-Size = 30
-Align = 0
+Inheritance = PartyOptionsText2
 Text = PARTY_MODE_TOURNAMENT_OPTIONS_DESC
 
 [PartyTournamentOptionsSelectRoundsFinal]
@@ -9003,12 +8956,7 @@ Texts = 1
 Inheritance = PartyTournamentPlayerText1
 
 [PartyTournamentRoundsText2]
-X = 70
-Y = 65
-Color = White
-Font = 0
-Size = 30
-Align = 0
+Inheritance = PartyOptionsText2
 Text = PARTY_MODE_TOURNAMENT_ROUNDS_DESC
 
 [PartyTournamentRoundsTextNameBlock1Player1]
@@ -9396,12 +9344,7 @@ Tex = PartyBG
 Inheritance = PartyTournamentPlayerText1
 
 [PartyTournamentWinText2]
-X = 70
-Y = 53
-Color = White
-Font = 0
-Size = 30
-Align = 0
+Inheritance = PartyOptionsText2
 Text = PARTY_MODE_TOURNAMENT_WIN_DESC
 
 [PartyTournamentWinTextScorePlayer1]
