Added again category text and scroll on show to reproduce the first song

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -765,6 +765,12 @@ Text = C_FIXEDBY
 ###  screen song  ###
 #####################
 
+[SongTextCat]
+X = 15
+Y = 50
+Color = White
+Size = 20
+
 [SongSearchIcon]
 X = 240
 Y = 555
@@ -1051,6 +1057,9 @@ Tex = SongBG
 [SongRouletteStaticNonParty1]
 Type = Transparent
 
+[SongRouletteTextCat]
+Inheritance = SongTextCat
+
 #title screen: Song selection
 [SongRouletteTextNonParty1]
 X = 15
@@ -1078,7 +1087,7 @@ Y = 130
 H = 150
 W = 150
 Rows = 1
-Cols = 5
+Cols = 4
 Padding = 60
 Reflections = 1
 
@@ -1324,6 +1333,10 @@ Tex = SongBG
 
 #Dummy static
 [SongChessboardStaticNonParty1]
+Type = Transparent
+
+[SongChessBoardTextCat]
+Inheritance = SongTextCat
 
 #text title screen
 [SongChessboardTextNonParty1]
@@ -1667,6 +1680,10 @@ Tex = SongBG
 
 #Dummy static
 [SongCarouselStaticNonParty1]
+Type = Transparent
+
+[SongCarouselTextCat]
+Inheritance = SongTextCat
 
 #text title screen
 [SongCarouselTextNonParty1]
@@ -1674,6 +1691,7 @@ Inheritance = SongRouletteTextNonParty1
 
 [SongCarouselCover]
 Inheritance = SongRouletteCover
+Cols = 3
 
 [SongCarouselMainCover]
 Inheritance = SongRouletteMainCover
@@ -1872,6 +1890,11 @@ Tex = SongBG
 
 #Dummy static
 [SongSlotMachineStaticNonParty1]
+Type = Transparent
+
+[SongSlotMachineTextCat]
+Inheritance = SongTextCat
+Y = 560
 
 #text title screen
 [SongSlotMachineTextNonParty1]
@@ -1893,7 +1916,7 @@ X = 40
 Y = 210
 W = 300
 H = 170
-Rows = 1
+Rows = 3
 Cols = 1
 
 [SongSlotMachineMainCover]
@@ -2152,6 +2175,10 @@ Tex = SongBG
 
 #Dummy static
 [SongSlideStaticNonParty1]
+Type = Transparent
+
+[SongSlideTextCat]
+Inheritance = SongTextCat
 
 #text title screen
 [SongSlideTextNonParty1]
@@ -2163,7 +2190,7 @@ X = 324
 Y = 80
 W = 150
 H = 200
-Cols = 11
+Cols = 13
 
 [SongSlideMainCover]
 Inheritance = SongRouletteMainCover
@@ -2371,7 +2398,6 @@ Align = 1
 [SongListBackground]
 Tex = SongBG
 
-#Dummy static
 [SongListStaticNonParty1]
 X = 555
 Y = 0
@@ -2383,10 +2409,15 @@ Color = ColorLight
 Tex = SongSelection2
 Type = Colorized
 
+[SongListTextCat]
+Inheritance = SongTextCat
+X = 539
+Y = 30
+Align = 2
+
 #text title screen
 [SongListTextNonParty1]
 Inheritance = SongRouletteTextNonParty1
-
 
 [SongListSelectSong]
 X = 30
@@ -2712,6 +2743,11 @@ Tex = SongBG
 
 #Dummy static
 [SongMosaicStaticNonParty1]
+Type = Transparent
+
+[SongMosaicTextCat]
+Inheritance = SongListTextCat
+X = 574
 
 #text title screen
 [SongMosaicTextNonParty1]
