--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -6030,33 +6030,19 @@ Text = SCORE_SEND_DESC
 [SendScorePopup]
 
 [SendScorePopupBackground]
-Type=Fade
-ColR=0
-ColG=0
-ColB=0
-Alpha=0.4
+Inheritance = CheckPopupBackground
+
 
 [SendScorePopupStatic1]
-Tex = interface_dialog_background2
-X = 200
-Y = 150
-W = 400
+Inheritance = CheckPopupStatic1
 H = 280
-Z = 1
 Color = White
 Type = Transparent
-Reflection = 1
-ReflectionSpacing = 15
 
 [SendScorePopupText1]
-X = 400
+Inheritance = CheckPopupText1
 Y = 157
-W = 400
 Color = ColorLight
-Font = 0
-Size = 30
-Align = 1
-Z = 1
 
 [SendScorePopupSelectSlide1]
 Inheritance = OptionsSelectSlide
@@ -6108,163 +6094,76 @@ Align = 0
 Z = 1
 
 [SendScorePopupButtonUsernameText2]
+Inheritance = SendScorePopupButtonUsernameText1
 X = -120
-Y = 0
 Text=SING_OPTIONS_NETWORK_USERNAME
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Z = 1
 
 [SendScorePopupButtonPassword]
-X = 380
+Inheritance = SendScorePopupButtonUsername
 Y = 350
-W = 160
-H = 25
-Tex = Button
-Color = GrayLight
-DColor = GrayDark
-Type = Transparent
-Texts = 2
-Z = 1
 
 [SendScorePopupButtonPasswordText1]
-X = 5
-Y = 0
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Z = 1
+Inheritance = SendScorePopupButtonUsernameText1
 
 [SendScorePopupButtonPasswordText2]
+Inheritance = SendScorePopupButtonUsernameText1
 X = -120
-Y = 0
 Text=SING_OPTIONS_NETWORK_PASSWORD
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Z = 1
 
 [SendScorePopupButton1]
+Inheritance = CheckPopupButton1
 X = 295
 Y = 390
-W = 100
-H = 25
 Tex = Button
 Color = ColorLight
 DColor = ColorDark
 Type = Transparent
-Texts = 1
-Z = 1
 
 [SendScorePopupButton1Text1]
-X = 50
-Y = 0
-Color = White
-Font = 0
-Size = 24
-Align = 1
-Z = 1
+Inheritance = CheckPopupButton1Text1
 
 [SendScorePopupButton2]
+Inheritance = SendScorePopupButton1
 X = 405
-Y = 390
-W = 100
-H = 25
-Tex = Button
-Color = ColorLight
-DColor = ColorDark
-Type = Transparent
-Texts = 1
-Z = 1
 
 [SendScorePopupButton2Text1]
-X = 50
-Y = 0
-Color = White
-Font = 0
-Size = 24
-Align = 1
-Z = 1
+Inheritance = CheckPopupButton1Text1
 
 [ScoreDownloadPopup]
 
 [ScoreDownloadPopupBackground]
-Type=Fade
-ColR=0
-ColG=0
-ColB=0
-Alpha=0.4
+Inheritance = CheckPopupBackground
 
 [ScoreDownloadPopupStatic1]
-Tex = interface_dialog_background
-X = 200
-Y = 150
-W = 400
-H = 200
-Z = 1
+Inheritance = CheckPopupStatic1
 Color = White
 Type = Transparent
-Reflection = 1
-ReflectionSpacing = 15
 
 [ScoreDownloadPopupText1]
-X = 400
-Y = 160
-W = 400
+Inheritance = CheckPopupText1
 Color = ColorLight
-Font = 0
-Size = 30
 Text = SCORE_DOWNLOAD_TITLE
-Align = 1
-Z = 1
 
 [ScoreDownloadPopupSongText]
+Inheritance = CheckPopupText
 X = 220
-Y = 210
-W = 280
-Color = White
-Font = 0
-Size = 30
-Text = song progress
 Align = 0
-Z = 1
 
 [ScoreDownloadPopupWebText]
+Inheritance = CheckPopupText
 X = 580
-Y = 210
-W = 280
-Color = White
-Font = 0
-Size = 30
-Text = web progress
 Align = 2
-Z = 1
 
 [ScoreDownloadPopupButton1]
+Inheritance = CheckPopupButton1
 X = 350
-Y = 310
-W = 100
-H = 25
 Tex = Button
 Color = ColorLight
 DColor = ColorDark
 Type = Transparent
-Texts = 1
-Z = 1
 
 [ScoreDownloadPopupButton1Text1]
-X = 50
-Y = 0
-Color = White
-Font = 0
-Size = 24
-Text = YES
-Align = 1
-Z = 1
+Inheritance = CheckPopupButton1Text1
 
 [ScoreDownloadPopupStatic2]
 Tex = ProgressBar
@@ -6277,14 +6176,8 @@ Color = Gray
 Type = Transparent
 
 [ScoreDownloadPopupStatic3]
-Tex = ProgressBar
-X = 219
+Inheritance = ScoreDownloadPopupStatic2
 Y = 273
-W = 362
-H = 20
-Z = 1
-Color = Gray
-Type = Transparent
 
 [ScoreDownloadPopupProgressSong]
 X = 220
@@ -6295,12 +6188,8 @@ Color = ColorDark
 Type = Transparent
 
 [ScoreDownloadPopupProgressWeb]
-X = 220
+Inheritance = ScoreDownloadPopupProgressSong
 Y = 275
-W = 360
-H = 16
-Color = ColorDark
-Type = Transparent
 
 [Top5]
 Texts = 1
@@ -9886,147 +9775,58 @@ Inheritance = OptionsButtonExit2Text
 [InsertUserPopup]
 
 [InsertUserPopupBackground]
-Type=Fade
-ColR=0
-ColG=0
-ColB=0
-Alpha=0.4
+Inheritance = CheckPopupBackground
 
 [InsertUserPopupStatic1]
-Tex = interface_dialog_background
-X = 200
-Y = 150
-W = 400
+Inheritance = CheckPopupStatic1
 H = 220
-Z = 1
 Color = White
 Type = Transparent
-Reflection = 1
-ReflectionSpacing = 15
 
 [InsertUserPopupText1]
-X = 400
+Inheritance = CheckPopupText1
 Y = 165
-W = 400
 Color = ColorLight
-Font = 0
-Size = 30
-Align = 1
-Z = 1
 
 [InsertUserPopupText]
-X = 400
-Y = 215
+Inheritance = CheckPopupText
 W = 380
-Color = White
-Font = 0
-Size = 24
-Align = 1
-Z = 1
 
 [InsertUserPopupButtonUsername]
-X = 380
+Inheritance = SendScorePopupButtonUsername
 Y = 250
-W = 160
-H = 25
-Tex = Button
-Color = GrayLight
-DColor = GrayDark
-Type = Transparent
-Texts = 2
-Z = 1
 
 [InsertUserPopupButtonUsernameText1]
-X = 5
-Y = 0
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Z = 1
+Inheritance = SendScorePopupButtonUsernameText1
 
 [InsertUserPopupButtonUsernameText2]
-X = -120
-Y = 0
-Text = SING_OPTIONS_NETWORK_USERNAME
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Z = 1
+Inheritance = SendScorePopupButtonUsernameText2
 
 [InsertUserPopupButtonPassword]
-X = 380
+Inheritance = SendScorePopupButtonPassword
 Y = 280
-W = 160
-H = 25
-Tex = Button
-Color = GrayLight
-DColor = GrayDark
-Type = Transparent
-Texts = 2
-Z = 1
 
 [InsertUserPopupButtonPasswordText1]
-X = 5
-Y = 0
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Z = 1
+Inheritance = SendScorePopupButtonPasswordText1
 
 [InsertUserPopupButtonPasswordText2]
-X = -120
-Y = 0
-Text=SING_OPTIONS_NETWORK_PASSWORD
-Color = White
-Font = 0
-Size = 24
-Align = 0
-Z = 1
+Inheritance = SendScorePopupButtonPasswordText2
 
 [InsertUserPopupButton1]
+Inheritance = SendScorePopupButton1
 X = 285
 Y = 330
-W = 100
-H = 25
-Tex = Button
-Color = ColorLight
-DColor = ColorDark
-Type = Transparent
-Texts = 1
-Z = 1
 
 [InsertUserPopupButton1Text1]
-X = 50
-Y = 0
-Color = White
-Font = 0
-Size = 24
-Align = 1
-Z = 1
+Inheritance = SendScorePopupButton1Text1
 
 [InsertUserPopupButton2]
+Inheritance = SendScorePopupButton2
 X = 415
 Y = 330
-W = 100
-H = 25
-Tex = Button
-Color = ColorLight
-DColor = ColorDark
-Type = Transparent
-Texts = 1
-Z = 1
 
 [InsertUserPopupButton2Text1]
-X = 50
-Y = 0
-Color = White
-Font = 0
-Size = 24
-Align = 1
-Z = 1
+Inheritance = SendScorePopupButton2Text1
 
 [AboutMain]
 Texts = 2
@@ -10190,7 +9990,7 @@ Type=Fade
 ColR=0
 ColG=0
 ColB=0
-Alpha=0.3
+Alpha=0.4
 
 [CheckPopupStatic1]
 Tex = interface_dialog_background
@@ -10199,22 +9999,22 @@ Y = 150
 W = 400
 H = 200
 Z = 1
-alpha=0.95
+Alpha=0.95
 Color = ColorDark
 Type = Colorized
 Reflection = 0
-ReflectionSpacing = 15
 
-#[CheckPopupText1]
-#X = 400
-#Y = 160
-#W = 400
-#Color = White
-#Font = 0
-#Size = 30
-#Text = MSG_QUESTION_TITLE
-#Align = 1
-#Z = 1
+[CheckPopupText1]
+X = 400
+Y = 160
+W = 400
+Color = White
+Font = 0
+Size = 30
+Text =
+#MSG_QUESTION_TITLE
+Align = 1
+Z = 1
 
 [CheckPopupText]
 X = 400
@@ -10222,8 +10022,7 @@ Y = 210
 W = 280
 Color = White
 Font = 0
-Size = 30
-Text = error text
+Size = 24
 Align = 1
 Z = 1
 
@@ -10274,66 +10073,31 @@ Z = 1
 [ErrorPopup]
 
 [ErrorPopupBackground]
-Type=Fade
-ColR=0
-ColG=0
-ColB=0
-Alpha=0.4
+Inheritance = CheckPopupBackground
 
 [ErrorPopupStatic1]
-Tex = interface_dialog_background
-X = 200
-Y = 150
-W = 400
-H = 200
+Inheritance = CheckPopupStatic1
 Z = 0.98
 Color = White
 Type = Transparent
-Reflection = 0
-ReflectionSpacing = 15
 
 [ErrorPopupText1]
-X = 400
-Y = 160
-W = 400
+Inheritance = CheckPopupText1
 Color = ColorLight
-Font = 0
-Size = 30
 Text = MSG_ERROR_TITLE
-Align = 1
-Z = 1
 
 [ErrorPopupText]
-X = 400
-Y = 210
+Inheritance = CheckPopupText
 W = 380
-Color = White
-Font = 0
-Size = 30
-Text = error text
-Align = 1
-Z = 1
 
 [ErrorPopupButton1]
+Inheritance = CheckPopupButton1
 X = 350
-Y = 310
-W = 100
-H = 25
 Tex = Button
-Color = ColorDark
-Type = Colorized
-Texts = 1
-Z = 1
 
 [ErrorPopupButton1Text1]
-X = 50
-Y = 0
-Color = White
-Font = 0
-Size = 24
+Inheritance = CheckPopupButton1Text1
 Text = OK
-Align = 1
-Z = 1
 
 [PausePopUpStatic]
 Tex = Pause
