--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -8,7 +8,7 @@
 ###################################
 
 [Theme]
-Version = 21.1
+Version = 20.12
 Creator = Daniel20
 DefaultSkin = Basic Violet
 
@@ -9883,7 +9883,7 @@ Y = -35
 Font = 0
 Size = 25
 Align = 1
-Text = ABOUT_USDX_DEVELOPEDBY
+Text = ABOUT_USWP_DEVELOPEDBY
 Color = White
 
 [AboutMainTextOverview]
