Removed filename uppercase on songselection

--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -259,7 +259,7 @@ JukeboxSongMenuPlayPause = [jukebox]songmenuplaypause.png
 JukeboxSongMenuNext = [jukebox]songmenunext.png
 JukeboxSongMenuPrevious = [jukebox]songmenuprevious.png
 JukeboxSongMenuPlaylist = [jukebox]songmenuplaylist.png
-JukeboxSongSelection = [jukebox]songSelection.png
+JukeboxSongSelection = [jukebox]songselection.png
 JukeboxField = [jukebox]fieldbg.png
 JukeboxButton = [jukebox]mainBar.png
 JukeboxSelect = [jukebox]selectbg.png
