--- a/dists/linux/ultrastar-worldparty.desktop
+++ b/dists/linux/ultrastar-worldparty.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=UltraStar WorldParty
 Comment=Karaoke game
-Exec=/usr/games/ultrastar-worldparty
+Exec=env LC_ALL=C.UTF-8 /usr/games/ultrastar-worldparty
 Icon=/usr/share/icons/hicolor/256x256/apps/ultrastar-worldparty.png
 Terminal=false
 Type=Application
