--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -280,12 +280,12 @@ SelectFrame = [name]select.png
 AvatarFrame2 = [score]frame.png
 
 # # # NO AVATARS # # #
-NoAvatar_P1  = [name]noavatar.png
-NoAvatar_P2  = [name]noavatar.png
-NoAvatar_P3  = [name]noavatar.png
-NoAvatar_P4  = [name]noavatar.png
-NoAvatar_P5  = [name]noavatar.png
-NoAvatar_P6  = [name]noavatar.png
+NoAvatar_P1  = [profiles]noavatar.svg
+NoAvatar_P2  = [profiles]noavatar.svg
+NoAvatar_P3  = [profiles]noavatar.svg
+NoAvatar_P4  = [profiles]noavatar.svg
+NoAvatar_P5  = [profiles]noavatar.svg
+NoAvatar_P6  = [profiles]noavatar.svg
 
 # # # A B O U T # # #
 LogoWeb = [About]logo_web.png
