--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -59,6 +59,27 @@ ReflectionSpacing = 13
 [MainBackground]
 Tex = MainBG
 
+[MainText1]
+X = 5
+Y = 15
+Color = White
+Font = 0
+Size = 15
+Align = 0
+Text = UltraStar WorldParty 21.2
+
+[MainText2]
+X = 5
+Y = 35
+Z = 0.5
+Color = White
+Font = 0
+Size = 15
+Align = 0
+Text = Alfa - https://ultrastar-es.org
+Reflection = 0
+ReflectionSpacing = 13
+
 [MainTextDescriptionLong]
 X = 385
 Y = 550
