--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -23,8 +23,8 @@ interface_dialog_background = [interface]dialog_background.png
 interface_dialog_background2 = [interface]dialog_background2.png
 interface_dialog_backgroundtop = [interface]dialog_backgroundtop.png
 
-Cursor = [interface]cursor.png
-Cursor_Pressed = [interface]cursor_pressed.png
+Cursor = cursor.svg
+Cursor_Pressed = cursor2.svg
 
 /**
  * Icons
